[gd_scene load_steps=24 format=3 uid="uid://cyo1oy3q025wi"]

[ext_resource type="Script" uid="uid://c7dqoqj7snklg" path="res://scenes/Training/defence_game.gd" id="1_3c8ra"]
[ext_resource type="Texture2D" uid="uid://dfidio32ldfd7" path="res://assets/sprites/backgounds/BackgroundDevice.png" id="2_qc8de"]
[ext_resource type="Texture2D" uid="uid://cknf5tc6ldffs" path="res://assets/sprites/ui/Boards/ResultsBoard_002.png" id="4_3iagg"]
[ext_resource type="Texture2D" uid="uid://dnchx7n8gyr5a" path="res://assets/sprites/ui/buttons/DefenceButton.png" id="4_4irpy"]
[ext_resource type="Texture2D" uid="uid://bhx285ht4eik3" path="res://assets/sprites/magics/Magic001.png" id="4_ewo64"]
[ext_resource type="SpriteFrames" uid="uid://bo5gw23lpckyb" path="res://resources/player_sprite_frames_baby.tres" id="5_4irpy"]
[ext_resource type="Texture2D" uid="uid://cj2e6yl8g5usj" path="res://assets/sprites/ui/buttons/StartButton.png" id="5_7pstl"]
[ext_resource type="Texture2D" uid="uid://yh7s0k4la210" path="res://assets/sprites/ui/buttons/BackButton.png" id="5_i2thk"]
[ext_resource type="Texture2D" uid="uid://b412n7a07ditu" path="res://assets/sprites/Objects/Flag_Small_01.png" id="6_4irpy"]
[ext_resource type="Texture2D" uid="uid://jc8mrlr7lgmp" path="res://assets/sprites/backgounds/Forest_Floor_001.png" id="7_i2thk"]
[ext_resource type="Texture2D" uid="uid://b4xee6105jeaj" path="res://assets/sprites/Objects/Flag_Small_02.png" id="8_4bdhl"]
[ext_resource type="Texture2D" uid="uid://yrikrk651c2l" path="res://assets/sprites/Objects/Flag_Small_03.png" id="9_smvrw"]
[ext_resource type="Texture2D" uid="uid://b7mr164avb6b4" path="res://assets/sprites/magics/Magic002.png" id="10_3iagg"]
[ext_resource type="Texture2D" uid="uid://k48cqo0wnox4" path="res://assets/sprites/magics/Magic003.png" id="11_2xecy"]
[ext_resource type="Texture2D" uid="uid://cmbs3x0w8pac7" path="res://assets/sprites/ui/clouds/Cloud_01.png" id="15_eerbf"]
[ext_resource type="Texture2D" uid="uid://bu6ctqbkqqlc7" path="res://assets/sprites/ui/clouds/Cloud_02.png" id="16_h865h"]
[ext_resource type="Texture2D" uid="uid://bxs303nqmfemb" path="res://assets/sprites/ui/Backgrounds/Sky_001.png" id="17_h865h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4irpy"]
size = Vector2(110, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bdhl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ewo64")
}, {
"duration": 1.0,
"texture": ExtResource("10_3iagg")
}, {
"duration": 1.0,
"texture": ExtResource("11_2xecy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewo64"]
size = Vector2(14.866147, 5.946904)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eufa4"]
size = Vector2(55, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc8de"]
size = Vector2(28.5, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pstl"]
size = Vector2(0.5799998, 2.2400002)

[node name="DefenceGame" type="Node2D"]
script = ExtResource("1_3c8ra")

[node name="BackgorundDevice" type="Node2D" parent="."]

[node name="BackgroundMain" type="Sprite2D" parent="BackgorundDevice"]
position = Vector2(360, 640)
texture = ExtResource("2_qc8de")

[node name="BackgoudsFloor" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(360, 981)
texture = ExtResource("7_i2thk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Board" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(364, 223)
scale = Vector2(8, 8)
texture = ExtResource("4_3iagg")

[node name="InstructionLabel" type="Label" parent="CanvasLayer"]
offset_left = 151.0
offset_top = 130.0
offset_right = 582.0
offset_bottom = 314.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 172.0
offset_top = 157.0
offset_right = 542.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 56
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="CanvasLayer"]
offset_left = 152.0
offset_top = 129.0
offset_right = 571.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlockButton" type="Button" parent="CanvasLayer"]
offset_left = 300.0
offset_top = 1120.0
offset_right = 428.0
offset_bottom = 1248.0
icon = ExtResource("4_4irpy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 253.0
offset_top = 1120.0
offset_right = 509.0
offset_bottom = 1248.0
icon = ExtResource("5_i2thk")
flat = true
icon_alignment = 1
expand_icon = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 253.0
offset_top = 1120.0
offset_right = 509.0
offset_bottom = 1248.0
icon = ExtResource("5_7pstl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Flag1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(270, 836)
scale = Vector2(6, 6)
texture = ExtResource("8_4bdhl")

[node name="Flag2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(298, 836)
scale = Vector2(6, 6)
texture = ExtResource("9_smvrw")

[node name="Flag3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(326, 836.00006)
scale = Vector2(6, 6)
texture = ExtResource("6_4irpy")

[node name="PlayerSprite" type="Area2D" parent="."]
position = Vector2(208, 828)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerSprite"]
position = Vector2(1.1712313e-05, 0)
scale = Vector2(6.8750005, 7)
sprite_frames = ExtResource("5_4irpy")
animation = &"fight"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite"]
shape = SubResource("RectangleShape2D_4irpy")

[node name="Projectile" type="Area2D" parent="."]
position = Vector2(665, 771)
scale = Vector2(7, 7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Projectile"]
position = Vector2(7.937008, 7.78761)
sprite_frames = SubResource("SpriteFrames_4bdhl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectile"]
visible = false
position = Vector2(8.4409485, 8.070793)
shape = SubResource("RectangleShape2D_ewo64")

[node name="HitboxFar" type="Area2D" parent="."]
position = Vector2(294, 702)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxFar"]
position = Vector2(54, 126)
shape = SubResource("RectangleShape2D_eufa4")
debug_color = Color(0.7, 0, 0.011666489, 0.13725491)

[node name="HitboxMid" type="Area2D" parent="."]
position = Vector2(238, 702)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxMid"]
position = Vector2(68.25, 126)
shape = SubResource("RectangleShape2D_qc8de")
debug_color = Color(0.665, 0.7, 0, 0.21568628)

[node name="HitboxNear" type="Area2D" parent="."]
modulate = Color(0.10980392, 1, 1, 1)
self_modulate = Color(1, 0.16078432, 1, 1)
position = Vector2(212, 703)
scale = Vector2(50, 50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxNear"]
position = Vector2(1.31, 2.5)
shape = SubResource("RectangleShape2D_7pstl")
debug_color = Color(0.03500005, 0.7, 0, 0.10980392)

[node name="CloudMovement" type="Node2D" parent="."]
position = Vector2(-200, 300)
scale = Vector2(5, 5)

[node name="Cloud1" type="Sprite2D" parent="CloudMovement"]
texture = ExtResource("15_eerbf")

[node name="Cloud2" type="Sprite2D" parent="CloudMovement"]
position = Vector2(4.9999995, 31.199999)
texture = ExtResource("16_h865h")

[node name="Background" type="Node2D" parent="."]
z_index = -5
position = Vector2(360, 500)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(0.00014522672, -32.250008)
scale = Vector2(22.5, 13.4765625)
texture = ExtResource("17_h865h")

[connection signal="pressed" from="CanvasLayer/BlockButton" to="." method="_on_block_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="area_entered" from="Projectile" to="." method="_on_projectile_area_entered"]
